--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Nunito Sans', sans-serif !important;
+  font-family: 'Nunito', sans-serif !important;
 }
 
 a {
@@ -34,4 +34,15 @@ a {
 
 .btn-custom {
   background: linear-gradient(to right, rgb(152, 185, 252), rgb(211, 237, 254));
+}
+
+.custom-input {
+  display: block;
+  width: 190px !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+::placeholder {
+  font-family: 'Nunito Sans', sans-serif !important;
 }
