--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -15,9 +15,14 @@ a {
   }
 }
 
+.shadow {
+  box-shadow: 0px 10px 25px -10px #98b9fc;
+}
+
 .page-title {
   color: rgba(60,60,60,1);
   font-size: 14px;
+  font-weight: bold;
   margin: 15px 0;
 }
 
