--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -19,6 +19,13 @@ a {
   box-shadow: 0px 10px 25px -10px #98b9fc;
 }
 
+.p-ab-vc {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .page-title {
   color: rgba(60,60,60,1);
   font-size: 14px;
